BA: mark similar groups